# swagger.yaml
@@ -48,7 +48,6 @@ paths:
                     example: login successfull
                   data:
                     type: object
-                    properties:
         "401":
           description: Unauthenticated
           content:
@@ -68,8 +67,32 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  # /auth/me
-  
+  /auth/me:
+    get:
+      tags:
+        - auth
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserData"
+        "401":
+          description: Unauthenticated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Unauthenticated"
+        "500":
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
   /auth/new:
     post:
       tags:
@@ -121,6 +144,61 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Duplicate"
+        "422":
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Validation"
+        "500":
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /auth/update-password:
+    put:
+      tags:
+        - auth
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: change password
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                oldPassword:
+                  type: string
+                newPassword:
+                  type: string
+      responses:
+        "200":
+          description: Updated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  data:
+                    type: object
+        "401":
+          description: Unauthenticated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Unauthenticated"
+        "403":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Unauthorized"
         "422":
           description: Validation error
           content:
